[package]
name = "bbcode-tagger"
version = "0.1.3"
authors = ["arviceblot <github@relay.arviceblot.com>"]
description = "BBCode tree parser and tagger"
edition = "2021"
license = "MIT"
repository = "https://github.com/arviceblot/bbcode-tagger"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.3"
